# chart-generator

./: .gitignore  ARCHITECTURE.md  DELIVERABLES.md  README.md
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: routes.py
backend/app/models/: __init__.py  chart_spec.py  requests.py
backend/app/services/: __init__.py  chart_inference.py
examples/: categorical.json  multi-series.json  time-series.json
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: chartApi.ts
frontend/src/components/: ChartDisplay.tsx  JsonInput.tsx
frontend/src/store/: store.ts
frontend/src/types/: chartSpec.ts
frontend/src/utils/: chartConverter.ts
